--- a/client/styles.scss
+++ b/client/styles.scss
@@ -26,7 +26,3 @@ list-style-position: outside;
 position: relative; left: 20px;
 padding: 0em 2em 0 1em;
 }
-
-
-table {width:100%;
-}
